test/parser/trait_declaration/public_methods_block_error.myte
module test

pub methods Foo {}